refactor: get(0)를 getFirst()으로 수정